--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"dayjs": "^1.11.19",
 		"fast-xml-parser": "^5.3.6",
 		"hono": "^4.11.9",
+		"proj4": "^2.20.2",
 		"protobufjs": "^8.0.0"
 	},
 	"devDependencies": {
