--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
 		"build": "tsc",
 		"start": "node dist/index.js"
 	},
-	"packageManager": "pnpm@10.29.3",
+	"packageManager": "pnpm@10.30.0+sha512.2b5753de015d480eeb88f5b5b61e0051f05b4301808a82ec8b840c9d2adf7748eb352c83f5c1593ca703ff1017295bc3fdd3119abb9686efc96b9fcb18200937",
 	"dependencies": {
 		"@hono/node-server": "^1.19.9",
-		"dayjs": "^1.11.19",
+		"decompress": "^4.2.1",
 		"fast-xml-parser": "^5.3.6",
-		"hono": "^4.11.9",
+		"gtfs-realtime-bindings": "^1.1.1",
+		"hono": "^4.11.10",
+		"papaparse": "^5.5.3",
 		"proj4": "^2.20.2",
-		"protobufjs": "^8.0.0"
+		"temporal-polyfill": "^0.3.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.15",
+		"@biomejs/biome": "^2.4.2",
+		"@types/decompress": "^4.2.7",
 		"@types/node": "^25.2.3",
+		"@types/papaparse": "^5.5.2",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3"
 	}
